--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>Bem-vindo ao Studio Zen Yoga</h1>
+        <h1>Bem-vindo ao Studio Miguel Pereira Yoga</h1>
         <p>Equilibre corpo e mente com nossas práticas</p>
         <a href="#contato" class="cta-button">Agende sua Aula</a>
     </header>
     
     <section id="sobre">
         <h2>Sobre Nós</h2>
-        <p>No Studio Zen Yoga, oferecemos um espaço tranquilo para sua jornada de bem-estar, com instrutores experientes e um ambiente acolhedor.</p>
+        <p>No Studio Miguel Pereira Yoga, oferecemos um espaço tranquilo para sua jornada de bem-estar, com instrutores experientes e um ambiente acolhedor.</p>
     </section>
     
     <section id="servicos">
         <h2>Nossos Serviços</h2>
         <ul>
-            <li>Aulas para iniciantes e avançados</li>
+            <li>Aulas gratuitas</li>
             <li>Meditação guiada</li>
             <li>Aulas individuais e em grupo</li>
             <li>Eventos especiais e retiros</li>
